Closed
Bug 783379
Opened 13 years ago
Closed 13 years ago
Image discarding not always working correctly on OSX and Linux
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla17
| Tracking | Status | |
|---|---|---|
| firefox17 | - | --- |
People
(Reporter: mccr8, Assigned: khuey)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.96 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
I've only noticed this recently, in the last few days. It maybe due to bug 683290.
When you have Zimbra in a background tab for a while, then switch back, many of the images don't show up. The regular folder icon on the left side shows up, but the icons for "sent" "drafts" "junk", and the various icons on the main toolbar across the middle (new, get mail, delete, etc.) don't show up. Interacting with the page a little brings it back to some extent.
| Reporter | ||
Comment 1•13 years ago
|
||
Okay, it does show the icon for "sent", "new" and "translate".
| Reporter | ||
Comment 2•13 years ago
|
||
Similar problem on Pandora. There's a cloud image in the background that isn't displayed if you flip to another tab for a while, then switch back.
Summary: Zimbra doesn't show icons when it sits in a background tab for a while → Zimbra and Pandora don't show images when they sit in a background tab for a while
| Reporter | ||
Comment 3•13 years ago
|
||
On Pandora, image is reshown when you scroll up and down.
Blocks: 683290
| Reporter | ||
Updated•13 years ago
|
Keywords: regression
| Reporter | ||
Comment 4•13 years ago
|
||
When I load dslreports.com, the images for the main toolbar (home, reviews, tools, forums, etc.) are not immediately displayed. Switching to another tab and back does show them, as does reloading. Doing a hard reload (command-shift-R on OSX) and they disappear again until I switch to another tab.
Also, I tried an 8/14 nightly at Kyle's request, and it did not show the symptoms in Comment 0-2.
OS: All → Mac OS X
| Reporter | ||
Comment 5•13 years ago
|
||
https://odesk.com/ doesn't show the background image (a bunch of people) on initial load.
Comment 6•13 years ago
|
||
I and brson are seeing this on Linux as well. Started over the last few days.
OS: Mac OS X → All
| Reporter | ||
Comment 7•13 years ago
|
||
odesk.com is working for me now, so maybe it was just site slowness.
| Reporter | ||
Comment 9•13 years ago
|
||
Alice's regression range in bug 784068 points at khuey's patch.
Summary: Zimbra and Pandora don't show images when they sit in a background tab for a while → Image discarding not always working correctly on OSX and Linux
Updated•13 years ago
|
tracking-firefox17:
--- → ?
Comment 10•13 years ago
|
||
(In reply to Andrew McCreight [:mccr8] from comment #7)
> odesk.com is working for me now, so maybe it was just site slowness.
Still present for me in zimbra.
Comment 11•13 years ago
|
||
Bisecting the range from dupe bug 784068 comment 5, the first bad revision is
102329:5c730c1f2274
changeset: 102329:5c730c1f2274
user: Kyle Huey <khuey@kylehuey.com>
date: Mon Aug 13 15:04:19 2012 -0700
summary: Bug 697230: Part 1 - Centralize style image observers. r=bz
(Same as causes the permaorange in bug 651866.)
Bisecting methodology: Open zimbra, browse to another tab, wait 1.5 minutes, go back. In the bad case most of the images vanished and only reappear on clicking on the page.
| Assignee | ||
Comment 12•13 years ago
|
||
There is an optimization to avoid invalidating frames before the first paint (since there is no existing data that is now invalid). The way we listen for paints is flawed, and sometimes we don't realize that a paint has occurred and fail to invalidate when we should. roc thinks this optimization is probably unnecessary, since invalidating these frames should be cheap. This patch removes that optimization.
Attachment #653585 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 13•13 years ago
|
||
Updated•13 years ago
|
Comment 15•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in
before you can comment on or make changes to this bug.
Description
•