Bug 783379: Remove unnecessary (wrong) optimization of image decoding notifications. r=roc